adapt to --enable-preview